Friends Fragment now uses actual friends list, and shows requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- MENU ITEMS -->
+    <string name="menuItem_search">Search</string>
+    <string name="menuItem_requests">Requests</string>
+
     <!-- NAVIGATION DRAWER -->
     <string name="overview">Overview</string>
     <string name="statistics">Statistics</string>
