--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="overview">Overview</string>
     <string name="statistics">Statistics</string>
     <string name="friends">Friends</string>
+    <string name="players">Players</string>
     <string name="settings">Settings</string>
     <string name="starred">Starred</string>
     <string name="title_activity_login">Sign in</string>
