--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="no_network">No network connection</string>
     <string name="unable_to_contact_server">Unable to contact server</string>
     <string name="unknown_error">Unknown error</string>
+    <string name="friend_request_error">Unable to send friend request</string>
 
     <!-- FABS -->
     <string name="send_friend_request">Send Friend Request</string>
