--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,19 @@
     <string name="decline_friend_request">Decline Friend Request</string>
     <string name="friend_request_pending">Friend Request Pending</string>
 
+    <!-- STATS -->
+    <string name="goals">Goals</string>
+    <string name="shots">Shots</string>
+    <string name="shots_on_target">Shots On Target</string>
+    <string name="possession_percent">Possession (%)</string>
+    <string name="tackles">Tackles</string>
+    <string name="fouls">Fouls</string>
+    <string name="yellow_cards">Yellow Cards</string>
+    <string name="red_cards">Red Cards</string>
+    <string name="offsides">Offsides</string>
+    <string name="injuries">Injuries</string>
+    <string name="shot_accuracy_percent">Shot Accuracy (%)</string>
+    <string name="pass_accuracy_percent">Pass Accuracy (%)</string>
+    <string name="penalties">Penalties</string>
+
 </resources>
