--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,8 +66,8 @@
     <!-- TODO(user): replace with your real server client ID -->
     <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
          from https://console.developers.google.com/ -->
-    <string name="server_client_id">433114915503-1tgpgppqctui1f3k7d6ollra1gcq3gq6.apps.googleusercontent.com</string>
-    <string name="notification_key">AIzaSyDjCHksoGamhWxeNsaDN-DW5v3p9IcJNFE</string>
+    <string name="server_client_id">433114915503-sc59fevmgf8npcehi31ooc8en6b7j7ak.apps.googleusercontent.com</string>
+    <string name="notification_key">AAAAZNepIq8:APA91bF6NciH4LRjh-LyDtbTfSbympijUo1doURSTP63WIrYlEJMqt91RpHk5nCuzatYxz5TibqKvl9eK4-m5ThxzYMr3aUTxhv5TWmhcq_zRtsr_oncpY9U31YbqgX2jyubAxwhC0SNW5uKLq4vER1KN3I9Wab6cA</string>
 
     <!-- NOTIFICATIONS -->
     <string name="friend_request_from">Friend request from</string>
