--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,10 @@
     <string name="pass_accuracy_percent">Pass Accuracy (%)</string>
     <string name="penalties">Penalties</string>
 
+    <!-- MATCHES -->
+    <string name="win">Win</string>
+    <string name="loss">Loss</string>
+
     <!-- PERMISSIONS -->
     <string name="request_camera_permission">FIFA Statistics needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
