--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="players">Players</string>
     <string name="settings">Settings</string>
     <string name="starred">Starred</string>
+    <string name="matches">Matches</string>
     <string name="title_activity_login">Sign in</string>
     <string name="drawer.fifa_legend">FIFA Legend</string>
 
@@ -92,6 +93,9 @@
     <string name="please_wait">Please wait...</string>
     <string name="create_series_failed">Failed to create series</string>
     <string name="create_series_success">Series created successfully.</string>
+
+    <!-- Matches Fragment -->
+    <string name="matches_load_failed">Failed to load matches.</string>
 
     <!-- TOASTS -->
     <string name="not_found">Not found!</string>
