--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menuItem_add_match">Add Match</string>
     <string name="menuItem_camera">Camera</string>
     <string name="menuItem_confirm">Confirm</string>
+    <string name="menuItem_filterMatches">Filter Matches</string>
 
     <!-- NAVIGATION DRAWER -->
     <string name="overview">Overview</string>
