--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,7 @@
     <string name="accept_friend_request">Accept Friend Request</string>
     <string name="decline_friend_request">Decline Friend Request</string>
     <string name="friend_request_pending">Friend Request Pending</string>
+    <string name="error_loading_players">Failed to load players.</string>
 
     <!-- STATS -->
     <string name="goals">Goals</string>
@@ -135,6 +136,8 @@
     <string name="shot_accuracy_percent">Shot Accuracy (%)</string>
     <string name="pass_accuracy_percent">Pass Accuracy (%)</string>
     <string name="penalties">Penalties</string>
+    <string name="averages">Averages</string>
+    <string name="records">Records</string>
 
     <!-- MATCHES -->
     <string name="win">Win</string>
