--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="error_create_match">Failed to create match: %1$s</string>
     <string name="uploading_match">Uploading match</string>
     <string name="team_logo">%1$s logo</string>
+    <string name="retry">Retry</string>
 
     <!-- TOASTS -->
     <string name="not_found">Not found!</string>
