--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,7 @@
     <string name="uploading_series">Uploading series</string>
     <string name="please_wait">Please wait...</string>
     <string name="create_series_failed">Failed to create series</string>
-    <string name="create_series_success">Series created successfully.</string>
+    <string name="create_series_success">Series created successfully</string>
     <string name="series_saved">Series saved</string>
     <string name="series">Series</string>
     <string name="error_load_series">Failed to load series</string>
@@ -111,6 +111,7 @@
     <string name="matches_load_failed">Failed to load matches.</string>
     <string name="error_create_match">Failed to create match: %1$s</string>
     <string name="uploading_match">Uploading match</string>
+    <string name="request_sent">Request sent</string>
     <string name="team_logo">%1$s logo</string>
     <string name="retry">Retry</string>
     <string name="error_goals">Cannot change the match result</string>
@@ -120,6 +121,7 @@
     <string name="error_possession">Total Possession must equal 100%</string>
     <string name="error_shot_accuracy">Shot Accuracy does not match with Shots and Shots on
     Target</string>
+    <string name="error_empty_update">No changes made</string>
 
     <!-- TOASTS -->
     <string name="not_found">Not found!</string>
