Add view match button to update accepted/declined notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="notification_accept">ACCEPT</string>
     <string name="notification_decline">DECLINE</string>
     <string name="view">View</string>
+    <string name="view_match">View match</string>
 
     <string name="error_generic">Something went wrong</string>
 
