--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,10 @@
     <!-- CREATE SERIES ACTIVITY -->
     <string name="title_activity_create_series_activity">New Series</string>
     <string name="new_series">New Series</string>
+    <string name="new_match">New Match</string>
     <string name="create_series_exit_confirmation">"Are you sure you want to discard this series?"</string>
+    <string name="create_match_exit_confirmation">"Are you sure you want to discard this
+        match?"</string>
     <string name="dialog_keep_editing">KEEP EDITING</string>
     <string name="dialog_discard">DISCARD</string>
     <string name="dialog_save">SAVE</string>
