Basic leaders card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,7 @@
     <string name="penalties">Penalties</string>
     <string name="averages">Averages</string>
     <string name="records">Records</string>
+    <string name="leaders">Leaders</string>
     <string name="overall">OVERALL</string>
     <string name="last_ten">LAST 10</string>
     <string name="streak">STREAK</string>
