Add basic own goal button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,7 @@
     <string name="opponent">Opponent</string>
     <string name="cards">Cards</string>
     <string translatable="false" name="own_goal_code">(OG)</string>
+    <string translatable="false" name="OG">OG</string>
 
     <!-- MATCHES -->
     <string name="win">Win</string>
