--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- MENU ITEMS -->
+    <string name="menuItem_settings">Settings</string>
     <string name="menuItem_search">Search</string>
     <string name="menuItem_requests">Requests</string>
     <string name="menuItem_add_match">Add Match</string>
