--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,9 +188,9 @@
     <string name="averages">Averages</string>
     <string name="records">Records</string>
     <string name="leaders">Leaders</string>
-    <string name="overall">OVERALL</string>
-    <string name="last_ten">LAST 10</string>
-    <string name="streak">STREAK</string>
+    <string name="overall">Overall</string>
+    <string name="last_ten">Last 10</string>
+    <string name="streak">Streak</string>
     <string name="you">You</string>
     <string name="opponent">Opponent</string>
     <string name="cards">Cards</string>
