Add total stats

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="penalties">Penalties</string>
     <string name="averages">Averages</string>
     <string name="records">Records</string>
+    <string name="totals">Totals</string>
     <string name="leaders">Leaders</string>
     <string name="overall">Overall</string>
     <string name="last_ten">Last 10</string>
