--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,9 @@
     <string name="error_penalties_same">Penalties cannot be the same for each side</string>
     <string name="error_missing_fields">Some required fields are empty</string>
     <string name="best_of">Best of %1$d</string>
+    <string name="series_best_of">Best of </string>
+    <string name="reduce_series_length">Reduce series length</string>
+    <string name="increase_series_length">Increase series length</string>
 
     <plurals name="error_wrong_goals_count">
         <item quantity="one">%1$d goal is needed for %2$s and %3$d for %4$s</item>
